tests/NormalTests/paczka1/small_fuzzy/79432412.err
Error in line 4: wkJBB1H2O A600 26,92
Error in line 2: GR8oocZLdC S214 50,5
Error in line 6: GR8oocZLdC A600 72,4
